# pdf-processor

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dependencies.py  exceptions.py  main.py
app/models/: auth.py  pdf.py
app/routers/: auth.py  pdf.py
app/services/: auth.py  document_ai.py  email.py  firestore.py  report_parser.py  storage.py
tests/: conftest.py  test_auth.py  test_firestore.py  test_health.py  test_pdf.py  test_register.py  test_report_parser.py
